--- a/ionic/src/app/app.component.html
+++ b/ionic/src/app/app.component.html
@@ -1,3 +1,19 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+<ion-app>  
+     <ion-menu side="end" menuId="first" contentId="content">  
+       <ion-header>  
+         <ion-toolbar color="secundary">
+         </ion-toolbar>   
+       </ion-header>  
+       <ion-content color="secundary">  
+         <ion-list *ngFor="let pages of navigate">  
+           <ion-menu-toggle auto-hide="true">  
+             <ion-item [routerLink]="pages.url" routerDirection="forward">  
+               <ion-icon [name]="pages.icon" slot="start"></ion-icon>  
+                 {{pages.title}}   
+             </ion-item>  
+           </ion-menu-toggle>  
+         </ion-list>  
+       </ion-content>   
+     </ion-menu>  
+     <ion-router-outlet Id="content"></ion-router-outlet>  
+   </ion-app>
