--- a/ionic/src/app/pages/dashboard/dashboard.page.html
+++ b/ionic/src/app/pages/dashboard/dashboard.page.html
@@ -17,7 +17,6 @@
  
 <ion-content>
   <div *ngFor="let cat of items" class="category-block">
- 
     <ion-row no-padding class="category-banner">
       <ion-col text-left button tappable (click)="cat.expanded = !cat.expanded" align-self-center>
         {{ cat.category }}
@@ -25,15 +24,15 @@
     </ion-row>
  
     <ion-slides [options]="sliderConfig">
-      <ion-slide *ngFor="let product of cat.products">
+     <ion-slide *ngFor="let product of cat.boot">
         <div *ngIf="cat.expanded">
           <ion-card>
             <ion-card-header>
               <ion-card-title>
-                {{ product.name }} - ${{ product.price }}
+                {{ product.name }} - {{ product.price }}
               </ion-card-title>
               <ion-card-content>
-                <img src="https://via.placeholder.com/300x300">
+                <img src="/assets/icon/boot-redis1.png">
                 <ion-button expand="full" (click)="addToCart(product)">Add to Cart</ion-button>
               </ion-card-content>
             </ion-card-header>
@@ -41,5 +40,60 @@
         </div>
       </ion-slide>
     </ion-slides>
+
+    <ion-slides [options]="sliderConfig">
+      <ion-slide *ngFor="let product of cat.glove">
+         <div *ngIf="cat.expanded">
+           <ion-card>
+             <ion-card-header>
+               <ion-card-title>
+                 {{ product.name }} - {{ product.price }}
+               </ion-card-title>
+               <ion-card-content>
+                 <img src="/assets/icon/glove-code2.png">
+                 <ion-button expand="full" (click)="addToCart(product)">Add to Cart</ion-button>
+               </ion-card-content>
+             </ion-card-header>
+           </ion-card>
+         </div>
+       </ion-slide>
+     </ion-slides>
+
+     <ion-slides [options]="sliderConfig">
+      <ion-slide *ngFor="let product of cat.hat">
+         <div *ngIf="cat.expanded">
+           <ion-card>
+             <ion-card-header>
+               <ion-card-title>
+                 {{ product.name }} - {{ product.price }}
+               </ion-card-title>
+               <ion-card-content>
+                 <img src="/assets/icon/hat-core1.png">
+                 <ion-button expand="full" (click)="addToCart(product)">Add to Cart</ion-button>
+               </ion-card-content>
+             </ion-card-header>
+           </ion-card>
+         </div>
+       </ion-slide>
+     </ion-slides>
+
+     <ion-slides [options]="sliderConfig">
+      <ion-slide *ngFor="let product of cat.snowboard">
+         <div *ngIf="cat.expanded">
+           <ion-card>
+             <ion-card-header>
+               <ion-card-title>
+                 {{ product.name }} - {{ product.price }}
+               </ion-card-title>
+               <ion-card-content>
+                 <img src="/assets/icon/sb-core1.png">
+                 <ion-button expand="full" (click)="addToCart(product)">Add to Cart</ion-button>
+               </ion-card-content>
+             </ion-card-header>
+           </ion-card>
+         </div>
+       </ion-slide>
+     </ion-slides>
+
   </div>
 </ion-content>
