--- a/ionic/src/app/pages/dashboard/dashboard.page.html
+++ b/ionic/src/app/pages/dashboard/dashboard.page.html
@@ -1,10 +1,10 @@
 <ion-header>  
-  <ion-toolbar color="primary">  
+  <ion-toolbar color="secundary">  
     <ion-buttons slot="start">  
-      <ion-menu-button color="dark"></ion-menu-button>   
+      <ion-menu-button color="light"></ion-menu-button>   
     </ion-buttons>  
   <ion-title>  
-    Ionic Menu  Example
+    Wapiti
   </ion-title> 
     <ion-buttons slot="end">
       <ion-button (click)="openCart()">
@@ -29,7 +29,7 @@
           <ion-card>
             <ion-card-header>
               <ion-card-title>
-                {{ product.name }} - {{ product.price }}
+                {{ product.name }} - {{ product.price }}€
               </ion-card-title>
               <ion-card-content>
                 <img src="/assets/icon/boot-redis1.png">
@@ -47,7 +47,7 @@
            <ion-card>
              <ion-card-header>
                <ion-card-title>
-                 {{ product.name }} - {{ product.price }}
+                 {{ product.name }} - {{ product.price }}€
                </ion-card-title>
                <ion-card-content>
                  <img src="/assets/icon/glove-code2.png">
@@ -65,7 +65,7 @@
            <ion-card>
              <ion-card-header>
                <ion-card-title>
-                 {{ product.name }} - {{ product.price }}
+                 {{ product.name }} - {{ product.price }}€
                </ion-card-title>
                <ion-card-content>
                  <img src="/assets/icon/hat-core1.png">
@@ -83,7 +83,7 @@
            <ion-card>
              <ion-card-header>
                <ion-card-title>
-                 {{ product.name }} - {{ product.price }}
+                 {{ product.name }} - {{ product.price }}€
                </ion-card-title>
                <ion-card-content>
                  <img src="/assets/icon/sb-core1.png">
