--- a/ionic/src/app/pages/cart/cart.page.html
+++ b/ionic/src/app/pages/cart/cart.page.html
@@ -10,11 +10,11 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let item of selectedItems" lines="inset">
-      {{ item.count }}x {{ item.name }} - {{ item.price | currency:'USD':'symbol' }}
-      <ion-label slot="end" text-right>{{ (item.price * item.count) | currency:'USD':'symbol' }}</ion-label>
+      {{ item.count }}x {{ item.name }} - {{ item.price | currency:'EUR':'symbol' }}
+      <ion-label slot="end" text-right>{{ (item.price * item.count) | currency:'EUR':'symbol' }}</ion-label>
     </ion-item>
     <ion-item>
-      Total: <span slot="end">{{ total | currency:'USD':'symbol' }}</span>
+      Total: <span slot="end">{{ total | currency:'EUR':'symbol' }}</span>
     </ion-item>
   </ion-list>
 </ion-content>
