--- a/ionic/src/app/pages/cart/cart.page.html
+++ b/ionic/src/app/pages/cart/cart.page.html
@@ -18,3 +18,9 @@
     </ion-item>
   </ion-list>
 </ion-content>
+
+<ion-footer translucent="true" class="ion-no-boarder" mode="md">
+  <ion-toolbar color="translucent">
+    <ion-button expand="block" class="main-button" routerLink="/confirm" routerDirection="forward">Confirm</ion-button>
+  </ion-toolbar>
+</ion-footer>
