--- a/ionic/src/app/pages/login/login.page.html
+++ b/ionic/src/app/pages/login/login.page.html
@@ -1,8 +1,11 @@
 <ion-content class="ion-padding">
+  <div class="ion-padding container">
+    <h1>Login</h1>
+  </div>
   <form class="form" [formGroup]="validations_form" (ngSubmit)="loginUser(validations_form.value)">
 
     <ion-item>
-      <ion-label position="floating" color="primary">Email</ion-label>
+      <ion-label position="floating">Email</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -15,7 +18,7 @@
     </div>
 
     <ion-item>
-      <ion-label position="floating" color="primary">Password</ion-label>
+      <ion-label position="floating">Password</ion-label>
       <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -27,11 +30,11 @@
       </ng-container>
     </div>
 
-    <ion-button class="submit-btn" type="submit" [disabled]="!validations_form.valid">Log In</ion-button>
-
+    <ion-button expand="block" class="main-button" type="submit" [disabled]="!validations_form.valid">Log In</ion-button>
     <label class="error-message">{{errorMessage}}</label>
   </form>
-  <p class="go-to-register">
-    No account yet? <a (click)="goToRegisterPage()">Create an account.</a>
-  </p>
+
+  <div class="log-in">
+    Don't have an account? <ion-button fill="clear" routerLink="/register" routerDirection="back">Sign Up</ion-button>
+  </div>
 </ion-content>
