--- a/ionic/src/app/pages/register/register.page.html
+++ b/ionic/src/app/pages/register/register.page.html
@@ -1,8 +1,11 @@
 <ion-content class="ion-padding">
+  <div class="ion-padding container">
+    <h1>SignUp</h1>
+  </div>
   <form class="form" [formGroup]="validations_form" (ngSubmit)="tryRegister(validations_form.value)">
 
     <ion-item>
-      <ion-label position="floating" color="primary">Email</ion-label>
+      <ion-label position="floating">Email</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -15,7 +18,7 @@
     </div>
 
     <ion-item>
-      <ion-label position="floating" color="primary">Password</ion-label>
+      <ion-label position="floating">Password</ion-label>
       <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -27,10 +30,12 @@
       </ng-container>
     </div>
 
-
-    <ion-button class="submit-btn" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
+    <ion-button expand="block" class="main-button" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
-  <p class="go-to-login">Already have an account? <a (click)="goLoginPage()">Try to Log In.</a></p>
+  
+  <div class="sing-up">
+    Already have an account? <ion-button fill="clear" routerLink="/login" routerDirection="back">Sign In</ion-button>
+  </div>
 </ion-content>
