--- a/ionic/src/app/menu/menu/menu.page.html
+++ b/ionic/src/app/menu/menu/menu.page.html
@@ -1,9 +1,7 @@
-<ion-content>
-  <ion-list class="menu">
-    <ion-button expand="block" routerLink="/dashboard" routerDirection="forward">Home</ion-button>
-    <ion-button expand="block" routerLink="/profil" routerDirection="forward">Profil</ion-button>
-    <ion-button expand="block" routerLink="/history" routerDirection="forward">History</ion-button>
-    <ion-button expand="block" routerLink="/settings" routerDirection="forward">Settings</ion-button>
-    <ion-button expand="block" routerLink="/welcome" routerDirection="back">LogOut</ion-button>
-  </ion-list>
+<ion-content color="primary">
+  <div class="menu" color="primary">
+    <ion-button color="dark" expand="block" routerLink="/dashboard" routerDirection="forward">Magazin</ion-button>
+    <ion-button color="dark" expand="block" routerLink="/profil" routerDirection="forward">Profil</ion-button>
+    <ion-button color="dark" expand="block" routerLink="/welcome" routerDirection="back">Logout</ion-button>
+  </div>
 </ion-content>
