--- a/ionic/src/app/menu/profil/profil.page.html
+++ b/ionic/src/app/menu/profil/profil.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header color="primary">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button class="backbtn" routerLink="/dashboard" routerDirection="back">
@@ -14,23 +14,25 @@
   <div class="profile-info">
     <ion-item>
       <ion-label position="floating">Name</ion-label>
-      <ion-input value=""></ion-input>
+      <ion-input value="Albu Robert"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Address Lane</ion-label>
-      <ion-input value=""></ion-input>
+      <ion-label position="floating">Adresa</ion-label>
+      <ion-input value="Str. Republicii Nr. 1 "></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">City</ion-label>
-      <ion-input value=""></ion-input>
+      <ion-label position="floating">Oras</ion-label>
+      <ion-input value="Brasov"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Email</ion-label>
-      <ion-input value=""></ion-input>
+      <ion-input value="test@test.com"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Phone Number</ion-label>
-      <ion-input value=""></ion-input>
+      <ion-label position="floating">Telefon</ion-label>
+      <ion-input value="+40712121212"></ion-input>
     </ion-item>
+    
+    <ion-button expand="block" class="main-button" routerLink="/dashboard" routerDirection="back">Salveaza</ion-button>
   </div>
 </ion-content>
