--- a/ionic/src/app/pages/cart/cart.page.html
+++ b/ionic/src/app/pages/cart/cart.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>My Cart</ion-title>
+    <ion-title>Cosul meu</ion-title>
   </ion-toolbar>
 </ion-header>
  
@@ -14,13 +14,9 @@
       <ion-label slot="end" text-right>{{ (item.price * item.count) | currency:'EUR':'symbol' }}</ion-label>
     </ion-item>
     <ion-item>
-      Total: <span slot="end">{{ total | currency:'EUR':'symbol' }}</span>
+      Total Plata: <span slot="end">{{ total | currency:'EUR':'symbol' }}</span>
     </ion-item>
   </ion-list>
-</ion-content>
 
-<ion-footer translucent="true" class="ion-no-boarder" mode="md">
-  <ion-toolbar color="translucent">
-    <ion-button expand="block" class="main-button" routerLink="/confirm" routerDirection="forward">Confirm</ion-button>
-  </ion-toolbar>
-</ion-footer>
+  <ion-button expand="block" class="main-button" routerLink="/confirm" routerDirection="forward">Confirma</ion-button>
+</ion-content>
