--- a/ionic/src/app/pages/confirm/confirm.page.html
+++ b/ionic/src/app/pages/confirm/confirm.page.html
@@ -6,15 +6,9 @@
           <ion-icon name="checkmark-circle-outline"></ion-icon>
         </div>
       </div>
-        <h2>Thank you. Your order is confirmed</h2>
-        <p>
-          Your order has not shipped yet, but this is to be expected<br>
-          as we are not a real store!
-        </p>
+        <h2>Iti multumim!</h2>
+        <h2>Comanda ta a fost confirmata</h2>
     </div>
   </div>
+  <ion-button expand="block" class="main-button" routerLink="/dashboard" routerDirection="back">Inapoi in magazin</ion-button>
 </ion-content>
-
-<ion-footer translucent="true" class="ion-no-boarder" mode="md">
-  <ion-button expand="block" class="main-button" routerLink="/dashboard" routerDirection="back">Back to Home</ion-button>
-</ion-footer>
