--- a/ionic/src/app/pages/cart/cart.page.scss
+++ b/ionic/src/app/pages/cart/cart.page.scss
@@ -1,4 +1,9 @@
-ion-footer {
-    padding-left: 20px;
-    padding-right: 20px;
+.main-button {
+    margin-top: auto;
+}
+ion-content {
+    --padding-top: 16px;
+    --padding-bottom: 16px;
+    --padding-start: 26px;
+    --padding-end: 26px;
 }
