--- a/ionic/src/app/pages/dashboard/dashboard.page.scss
+++ b/ionic/src/app/pages/dashboard/dashboard.page.scss
@@ -1,5 +1,5 @@
 ion-badge {
-    color: #fff;
+    color: #192138;
     position: absolute;
     top: 0px;
     right: 0px;
@@ -12,12 +12,14 @@ ion-title {
  
 .category-block {
     margin-bottom: 4px;
+    
 }
  
 .category-banner {
     border-left: 8px solid var(--ion-color-secundary);
-    background: #2ae3f7;
     height: 40px;
     padding: 10px;
-    font-weight: 500;
+    font-weight: 600;
+    text-align: center;
+    font-size: 20px;
 }
