--- a/ionic/src/app/pages/login/login.page.html
+++ b/ionic/src/app/pages/login/login.page.html
@@ -1,10 +1,10 @@
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" color="primary">
   <div class="ion-padding container">
     <h1>Login</h1>
   </div>
   <form class="form" [formGroup]="validations_form" (ngSubmit)="loginUser(validations_form.value)">
 
-    <ion-item>
+    <ion-item color="primary">
       <ion-label position="floating">Email</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
@@ -17,8 +17,8 @@
       </ng-container>
     </div>
 
-    <ion-item>
-      <ion-label position="floating">Password</ion-label>
+    <ion-item color="primary">
+      <ion-label position="floating">Parola</ion-label>
       <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -30,11 +30,11 @@
       </ng-container>
     </div>
 
-    <ion-button expand="block" class="main-button" type="submit" [disabled]="!validations_form.valid">Log In</ion-button>
+    <ion-button expand="block" color="dark" type="submit" [disabled]="!validations_form.valid">Login</ion-button>
     <label class="error-message">{{errorMessage}}</label>
   </form>
 
   <div class="log-in">
-    Don't have an account? <ion-button fill="clear" routerLink="/register" routerDirection="back">Sign Up</ion-button>
+    Nu ai un cont? <ion-button color="dark" fill="clear" routerLink="/register" routerDirection="back">Sign Up</ion-button>
   </div>
 </ion-content>
