--- a/ionic/src/app/pages/login/login.page.scss
+++ b/ionic/src/app/pages/login/login.page.scss
@@ -7,3 +7,13 @@
 p {
     text-align: center;
 }
+
+.form {
+    display: grid;
+    align-items: center;
+    margin-top:30%;
+}
+
+.log-in{
+    margin-top: 5%;
+}
