--- a/ionic/src/app/pages/register/register.page.html
+++ b/ionic/src/app/pages/register/register.page.html
@@ -1,10 +1,10 @@
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" color="primary">
   <div class="ion-padding container">
-    <h1>SignUp</h1>
+    <h1>Sign Up</h1>
   </div>
   <form class="form" [formGroup]="validations_form" (ngSubmit)="tryRegister(validations_form.value)">
 
-    <ion-item>
+    <ion-item color="primary">
       <ion-label position="floating">Email</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
@@ -17,8 +17,8 @@
       </ng-container>
     </div>
 
-    <ion-item>
-      <ion-label position="floating">Password</ion-label>
+    <ion-item color="primary">
+      <ion-label position="floating">Parola</ion-label>
       <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -30,12 +30,12 @@
       </ng-container>
     </div>
 
-    <ion-button expand="block" class="main-button" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
+    <ion-button expand="block" color="dark" type="submit" [disabled]="!validations_form.valid">Sing Up</ion-button>
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
   
   <div class="sing-up">
-    Already have an account? <ion-button fill="clear" routerLink="/login" routerDirection="back">Sign In</ion-button>
+    Ai deja un cont? <ion-button color="dark" fill="clear" routerLink="/login" routerDirection="back">Sign In</ion-button>
   </div>
 </ion-content>
